# AK7MP

./: AddSongDialog.cpp  AddSongDialog.h  AddSongDialog.ui  CMakeLists.txt  README.md  addDialog.cpp  addDialog.h  addDialog.ui  album.cpp  album.h  cddb.db  database.cpp  database.h  detail.cpp  detail.h  detail.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  search.cpp  search.h  search.ui  song.cpp  song.h  widget.cpp  widget.h
CDDB/: CMakeLists.txt  album.cpp  album.h  detail.cpp  detail.h  detail.ui  song.h  widget.cpp  widget.h  widget.ui
